trying to fix background text and navbar alignment

--- a/src/components/BackgroundPage.css
+++ b/src/components/BackgroundPage.css
@@ -1,6 +1,5 @@
 .backgroundPage {
     position: relative;
-    background: yellow;
 }
 
 .background {
@@ -10,10 +9,12 @@
 }
 
 .text_in_image {
+    width: 60%;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    /* background: yellow; */
 }
 
 .text_in_image > h1 {
@@ -26,4 +27,22 @@
     line-height: 1;
     font-size: 60px;
     color: white;
+}
+
+.text_in_image > button {
+    cursor: pointer;
+    position: relative;
+    margin-top: 7px;
+    line-height: 48px;
+    background-color: white;
+    border-radius: 24px;
+    padding: 0 24px;
+    font-size: 25px;
+    white-space: nowrap;
+    border: 0;
+}
+
+.text_in_image > button > a {
+    text-decoration: none;
+    color: black;
 }
